--- a/Task 10/index.html
+++ b/Task 10/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <title>Modules</title>
     <!-- Custom JS -->
-    <script defer src="./script.js"></script>
+    <script src="./modules/numbers/numbers.js" defer></script>
+    <script defer src="./script.js" type="module"></script>
   </head>
   <body>
     <!-- HTML not needed -->
