8 uzduoty atlikti papildomi neprasyti veiksmai

--- a/Task 8/index.html
+++ b/Task 8/index.html
@@ -8,5 +8,18 @@
   </head>
   <body>
     <!-- HTML not needed -->
+    <form action="#">
+      <input type="number" name="number1" id="" placeholder="Pirmas skaičius" required>
+      <input type="number" name="number2" id="" placeholder="Antras skaičius" required>
+      <select name="selektas" id="zzz">
+        <option value="">-- Pasirinkite norimą veiksmą --</option>
+        <option value="sum">Suma</option>
+        <option value="subtraction">Atimtis</option>
+        <option value="multiplication">Daugyba</option>
+        <option value="division">Dalyba</option>
+      </select>
+      <input type="submit" value="Skaičiuoti">
+      <div id="ats"></div>
+    </form>
   </body>
 </html>
